--- a/highscores.html
+++ b/highscores.html
@@ -12,20 +12,15 @@
 
 <body>
     <header>
-        <a id=leaderboard href="highscores.html">Highscores <i class="fas fa-hand-point-left fa-lg"></i>
-        </i></a> 
-    <span class="timer">Time:</span>
+        <!-- <a id=leaderboard href="highscores.html">Highscores <i class="fas fa-hand-point-left fa-lg"></i>
+        </i></a>  -->
+    <!-- <span class="timer">Time:</span> -->
     </header>
     <div class="container">
         <main class="high-scores">
         <h1>Score Board</h1>
         <div class="score-container">
-            <div class="row">
-                <h3>Position</h3>
-                <h3>Name</h3>
-                <h3 class="extra">Score</h3>
-                <h3 class="extra">Time</h3>
-            </div>
+            
         </div>
         <!-- <ul class="highscores-list">
         
