--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header>
         <a id=leaderboard href="highscores.html">Highscores <i class="fas fa-hand-point-left fa-lg"></i>
         </i></a> 
-    <span class="timer">Time:</span>
+    <span class="timer">Time:200</span>
     </header>
     <div class="container">
         <main>
         <h1>Coding Quiz Challenge</h1>
-        <p>Try to answer the following questions within 250 seconds!.</p><p>Incorrect answers will penalize your time by ten seconds!</p>
+        <p>Try to answer the following questions within 200 seconds!.</p><p>Incorrect answers will penalize your time by ten seconds!</p>
         <p>If you opt to read info(take a look at answer), you lose 10 seconds!!</p>
         <p>Go For It!!</p>
         <a href="question.html"><button  class="start">Start Quiz</button></a>
