Editing starting lines

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following questions within 200 seconds!.</p><p>Incorrect answers will penalize your time by ten seconds!</p>
-        <p>If you opt to read info(take a look at answer), you lose 10 seconds!!</p>
+        <p>If you opt to read info(take a look at the answers), you lose 10 seconds!!</p>
         <p>Go For It!!</p>
         <a href="question.html"><button  class="start">Start Quiz</button></a>
         </main>
