Added heading to guidelines and margin to start button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
     <div class="container">
         <main>
-        <h1>Coding Quiz Challenge</h1>
+        <h1>Coding Quiz Challenge</h1><br>
+        <h3>Guidelines:</h3>
         <p>Try to answer the following questions within 200 seconds!.</p><p>Incorrect answers will penalize your time by ten seconds!</p>
         <p>If you opt to read info(take a look at the answers), you lose 10 seconds!!</p>
         <p>Go For It!!</p>
